--- a/Resturaunt_web/Views/Home/Reservation.cshtml
+++ b/Resturaunt_web/Views/Home/Reservation.cshtml
@@ -2,61 +2,101 @@
                 Layout = "/Views/Shared/_HeaderLayout.cshtml"; }
 
 <html>
-<link rel="stylesheet" href="~/css/main.css" />
+<head>
+    <link rel="stylesheet" href="~/css/main.css" />
+    </head>
 <body>
     <div class="return">
         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Return</a>
 
     </div>
 
-    <p>Reserve</p>
-    <h1>Create Reservation</h1>
-    <form action="results.html" method="GET" enctype="multipart/form-data">
+    <div style="text-align:center">
 
 
-        <label for="start"> Date:</label>
-
-        <input type="date" id="start" name="trip-start"
-               value="2022-07-22"
-               min="2022-01-01" max="2022-12-31">
-        <label for="appt">Choose a time for your Reservation:</label>
-
-        <input type="time" id="appt" name="appt"
-               min="00:00" max="24:00" required>
-
-        <div>
-            <label for="tentacles">Number of People:</label>
-
-            <input type="number" id="tentacles" name="tentacles"
-                   min="1" max="100">
-        </div>
-        <label for="name">First Name:</label>
-        <input type="text" name="name" id="name" required>
-        <label for="name">Last Name:</label>
-        <input type="text" name="name" id="name" required>
-        <div>
-            <label for="email">Email:</label>
-            <input type="email" name="email" id="email" required>
-
-            <label for="phone">Phone Number:</label>
-
-            <input type="tel" id="phone" name="phone"
-                   pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-                   required>
-        </div>
+        <h1>Create Reservation</h1>
+    </div>
+    <div class=" border border-dark container shadow p-4 mb-4"  >
 
 
 
+        <form action="results.html" method="GET" enctype="multipart/form-data">
+            <div class="row">
+
+                <div class="col">
+
+
+                    <label for="start"> Date:</label>
+
+                    <input class="form-control" type="date" id="start" name="trip-start"
+                           value="2022-07-22"
+                           min="2022-01-01" max="2022-12-31">
+                </div>
+                <div class="col">
+
+
+                    <label for="appt">Choose a time for your Reservation:</label>
+
+                    <input  class="form-control"  type="time" id="appt" name="appt"
+                           min="00:00" max="24:00" required>
+                </div>
+            </div> 
+
+            <div>
+                <label for="tentacles">Number of People:</label>
+
+                <input  class="form-control"  type="number" id="tentacles" name="tentacles"
+                       min="1" max="100">
+            </div>
+            <div class="row">
+
+                <div class="col">
+
+                    <label for="name">First Name:</label>
+                    <input  class="form-control" type="text" name="name" id="name" required>
+
+                </div>
+                <div class="col">
+
+
+                    <label for="name">Last Name:</label>
+                    <input  class="form-control" type="text" name="name" id="name" required>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col">
+
+                    <label for="email">Email:</label>
+                    <input class="form-control"  type="email" name="email" id="email" required>
+                </div>
+                <div class="col">
+
+
+                    <label for="phone">Phone Number:</label>
+
+                    <input class="form-control"  type="tel" id="phone" name="phone"
+                          pattern="[0-9]{10}"    required>
+                </div>
+            </div>
 
 
 
 
 
 
-        <button type="reset">Reset</button>
-        <button type="submit">Submit</button>
-    </form>
 
+
+
+
+            <button class="btn btn-danger" type="reset">Reset</button>
+            <div style="text-align:center">
+
+
+                <button class="btn btn-info" type="submit">Create Booking</button>
+            </div>
+        </form>
+
+    </div>
 
 
 
