--- a/Resturaunt_web/Views/Home/AdminHomepage.cshtml
+++ b/Resturaunt_web/Views/Home/AdminHomepage.cshtml
@@ -18,7 +18,7 @@
         }
         .container {
             text-align:center;
-            padding: 100px;
+            padding: 10px 50px;
             border-bottom: 1px solid;
             border-color: rgb(201, 199, 200);
             max-width: 2000px;
