--- a/Resturaunt_web/wwwroot/css/main.css
+++ b/Resturaunt_web/wwwroot/css/main.css
@@ -17,8 +17,9 @@
 }
 
 .reservation {
-    height:300px;
-    width:100%;
+    height: 300px;
+    width: 100%;
+    Background-color: var(--lightgrey);
 }
 
 .menu {
@@ -33,8 +34,9 @@
 }
 
 .socialLinks {
-    width:100%;
+    width: 100%;
     height: 300px;
+    Background-color: var(--lightgrey);
 }
 
 .socialPhotos {
@@ -75,5 +77,6 @@
     .socialColumn img {
         margin-top: 8px;
         vertical-align: middle;
-        width:100%;
+        width: 100%;
+        border: black solid 1px;
     }
