--- a/Resturaunt_web/Views/Menus1/Index.cshtml
+++ b/Resturaunt_web/Views/Menus1/Index.cshtml
@@ -17,6 +17,18 @@
         <p style="margin-top:10px;margin-bottom:10px;">
             <a asp-action="Create">Create New</a>
         </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Starters">Starters</a>
+        </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Mains">Mains</a>
+        </p>
+        <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Deserts">Deserts</a>
+        </p>
+         <p style="margin-top:10px;margin-bottom:10px;">
+            <a asp-action="Drinks">Drinks</a>
+        </p>
         <table style="width:100%">
             <thead>
                 <tr>
