--- a/Resturaunt_web/Views/Reservations1/Reservation.cshtml
+++ b/Resturaunt_web/Views/Reservations1/Reservation.cshtml
@@ -4,15 +4,19 @@
     ViewData["Title"] = "Create";
     Layout = "~/Views/Shared/_HomepageLayout.cshtml";
 }
-@*<link rel="stylesheet" href="~/css/main.css" />*@
-
-
 
 
 
 <div class="row">
-    <div class="col-md-4 container">
-        <h1>Create Reservation</h1>
+    <div class="col-md-12-center">
+        <div class="alert alert-primary" role="alert">
+             <div class="text-center">
+                 <h4><i class='fas fa-calendar'></i> Making a Booking <i class='fas fa-users'></i> </h4>
+                 
+                 <h5>Please fill all the fields</h5>    
+             </div>
+        </div>
+        <div class="col-md-4-center">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -40,28 +44,12 @@
                 <input asp-for="Booked_time" class="form-control" />
                 <span asp-validation-for="Booked_time" class="text-danger"></span>
             </div>
+            <br>
             <div class="form-group">
                 <input type="submit" value="Check avalibile times" class="btn btn-primary" />
             </div>
         </form>
     </div>
-    <div>
-        <div class="row">
-    <div class="col-md-4 container">
-        <dl>
-            <dt class="col-sm-2">
-                @Html.DisplayNameFor(model => model.Reservation_Id)
-            </dt>
-            <dd class="col-sm-10">
-                @Html.DisplayFor(model => model.Reservation_Id)
-            </dd>
-        </dl>
-    </div>
-    
+  </div>
 </div>
-        <form asp-action="ResConfirmation">
-    <input type="hidden" asp-for="Reservation_Id" />
-    <input type="submit" value="Check avalible times" class="btn btn-danger" /> |
-</form>
-    </div>
-</div>
+
